# langstring

./: .pre-commit-config.yaml  CITATION.cff  README.md  create_test.py  list_of_filenames.txt  pyproject.toml  requirements.txt  tester.py  update_documentation.py
.github/workflows/: code_testing.yml  dependabot-auto-merge.yml  dependency-review.yml  pre-commit-ci-auto-merge.yml  scorecard.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/autoapi/: index.html
documentation/: dev_dependencies.md  flags_list.md  import_schema.drawio  import_schema_basic.dot  import_schema_complete.dot  import_schema_simplified.dot  import_scheme.dot  methods_controller.md  methods_converter.md  methods_langstring.md  methods_multilangstring.md  methods_setlangstring.md
langString/: langstring.py  multilangstring.py
langstring/: __init__.py  control_flags.py  controller.py  converter.py  converters.py  flags.py  langstring.py  langstring_control.py  multilangstring.py  multilangstring_control.py  setlangstring.py  synset.py
langstring/tests/: __init__.py
langstring/utils/: __init__.py  control_metaclass.py  controls_base.py  non_instantiable.py  validation_base.py  validation_mixin.py  validator.py  validators.py
langstring_lib/: __init__.py  langstring.py  multilangstring.py
langstring_lib/tests/: __init__.py
resources/: BaseImage.pptx
sphinx/: conf.py  index.html  index.rst
sphinx/_static/: logo_resize.css
sphinx/autoapi/: index.rst
tests/: conftest.py  test_converter_from_strings_to_setlangstring.py
tests/tests_controller/: test_controller.py  test_controller_get_flag.py  test_controller_get_flags.py  test_controller_inter_methods.py  test_controller_print_flag.py  test_controller_print_flags.py  test_controller_reset_flag.py  test_controller_reset_flags.py  test_controller_set_flag.py  test_langstring_control_set_flag.py
tests/tests_converter/: conftest.py  test_convert_langstring_to_multilangstring.py  test_convert_langstring_to_setlangstring.py  test_convert_multilangstring_to_langstrings.py  test_convert_multilangstring_to_setlangstrings.py  test_convert_setlangstring_to_langstrings.py  test_convert_setlangstring_to_multilangstring.py  test_convert_to_langstring.py  test_convert_to_multilangstring.py  test_convert_to_setlangstring.py  test_converter_from_langstring_to_multilangstring.py  test_converter_from_langstring_to_setlangstring.py  test_converter_from_langstring_to_string.py  test_converter_from_langstrings_to_multilangstring.py  test_converter_from_langstrings_to_setlangstring.py  test_converter_from_langstrings_to_setlangstrings.py  test_converter_from_langstrings_to_strings.py  test_converter_from_mls_to_ls.py  test_converter_from_multilangstring_to_langstrings.py  test_converter_from_multilangstring_to_setlangstrings.py  test_converter_from_multilangstring_to_string.py  test_converter_from_multilangstring_to_strings.py  test_converter_from_multilangstrings_to_langstrings.py  test_converter_from_multilangstrings_to_setlangstrings.py  test_converter_from_multilangstrings_to_strings.py  test_converter_from_setlangstring_to_langstrings.py  test_converter_from_setlangstring_to_multilangstring.py  test_converter_from_setlangstring_to_string.py  test_converter_from_setlangstring_to_strings.py  test_converter_from_setlangstrings_to_langstrings.py  test_converter_from_setlangstrings_to_multilangstring.py  test_converter_from_setlangstrings_to_strings.py  test_converter_from_string_to_langstring.py  test_converter_from_string_to_langstring_manual.py  test_converter_from_string_to_langstring_parse.py  test_converter_from_strings_to_langstrings.py  test_converter_from_strings_to_multilangstring.py  test_converter_from_strings_to_setlangstring.py  test_converter_to_langstring.py  test_converter_to_multilangstring.py  (+1 more)
tests/tests_langstring/: test_langstring___add__&__radd__.py  test_langstring___contains__.py  test_langstring___eq__&__ge__&__gt__&__le__&__lt__.py  test_langstring___getitem__.py  test_langstring___hash__.py  test_langstring___iadd__.py  test_langstring___imul__.py  test_langstring___init__.py  test_langstring___iter__.py  test_langstring___len__.py  test_langstring___mul__.py  test_langstring___repr__.py  test_langstring___rmul__.py  test_langstring___str__.py  test_langstring_add_radd.py  test_langstring_all_comparison.py  test_langstring_all_in_no_out_bool.py  test_langstring_all_in_no_out_ls.py  test_langstring_booleans.py  test_langstring_capitalize.py  test_langstring_casefold.py  test_langstring_center.py  test_langstring_center_ljust_rjust.py  test_langstring_contains.py  test_langstring_control.py  test_langstring_control_behavior.py  test_langstring_count.py  test_langstring_encode.py  test_langstring_endswith.py  test_langstring_eq.py  test_langstring_equals_langstring.py  test_langstring_equals_str.py  test_langstring_expandtabs.py  test_langstring_find_rfind.py  test_langstring_format.py  test_langstring_format_map.py  test_langstring_getitem.py  test_langstring_hash.py  test_langstring_iadd.py  test_langstring_imul.py  (+27 more)
tests/tests_langstring_control/: __init__.py  test_langstring_control.py  test_langstring_control_get_flag.py  test_langstring_control_get_flags.py  test_langstring_control_print_flags.py  test_langstring_control_reset_flags.py  test_langstring_control_set_flag.py
tests/tests_multilangstring/: conftest.py  sample_multilangstring.py  test_multilangstring___contains__.py  test_multilangstring___delitem__.py  test_multilangstring___eq__.py  test_multilangstring___getitem__.py  test_multilangstring___hash__.py  test_multilangstring___init__.py  test_multilangstring___iter__.py  test_multilangstring___len__.py  test_multilangstring___repr__.py  test_multilangstring___reversed__.py  test_multilangstring___setitem__.py  test_multilangstring___str__.py  test_multilangstring__get_registered_lang.py  test_multilangstring__merge_language_entries.py  test_multilangstring__validate_input_mls_dict.py  test_multilangstring_add.py  (+77 more)
(+205 files in other folders)
