[tool.poetry]
name = "langstring"
version = "3.0.2"
description = "LangString Python Library"
license = "Apache-2.0"
authors = ["Pedro Paulo F. Barcelos <p.p.favatobarcelos@utwente.nl>"]
readme = "README.md"
homepage = "https://github.com/pedropaulofb/langstring"
repository = "https://github.com/pedropaulofb/langstring"
documentation = "https://pedropaulofb.github.io/langstring"
keywords = ["string", "langstring", "multilangstring", "language-string", "multilanguage-string",
    "language-representation", "multilanguage"]
packages = [{ include = "langstring" },
    { include = "py.typed", from = "langstring" }]

[tool.poetry.urls]
"PyPi Project" = "https://pypi.org/project/langstring/"

[tool.poetry.dependencies]
python = "^3.11"
langcodes = { version = "^3.3.0", optional = true }

[tool.poetry.extras]
langcodes = ["langcodes"]

[tool.poetry.group.dev.dependencies]
# General
loguru = "^0.7.2"
mypy = "^1.7.0"
poetry = ">=1.7.1,<3.0.0"
pre-commit = ">=3.4,<5.0"
pytest = ">=8.3.2,<10.0.0"
pytest-cov = ">=5,<8"
tomli = "^2.0.1"
# Sphynx and plugins
sphinx = ">=7.2.6,<10.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = ">=2,<4"
sphinx-toolbox = ">=3.5,<5.0"
# Flake8 and plugins
flake8 = "^7.1.0"
flake8-broken-line = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = ">=0.4,<0.7"
flake8-noqa = "^1.4.0"
flake8-pyproject="^1.2.3"
flake8-pytest-style = "^2.0.0"
flake8-return = "^1.2.0"
flake8-unused-arguments = ">=0.0.13,<0.0.15"
flake8-useless-assert = "^0.4.4"
pep8-naming = ">=0.14,<0.16"
pydoclint = ">=0.5.6,<0.9.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.1.0"
tryceratops = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.vulture]
paths = ["."]
exclude = ["docs/", "sphinx/", "venv/"]
min_confidence = 61

[tool.mypy]
exclude = ['tests']
strict = true

[tool.pylint]
ignore-paths = '^(tests|docs|sphinx)'
max-line-length = 120
disable = 'E0401'

[tool.isort]
profile = "black"

[tool.flake8]
# OTHER USED PLUGINS: flake8-project
max-line-length = 120
exclude = ["tests/*", "update_documentation.py"]
ignore = "TRY003, DOC301"
